force-app/main/default/objects/Client_Credentials_OAuth__mdt/Client_Credentials_OAuth__mdt.object-meta.xml
<CustomObject>
    <description>Configuration parameters for creating an Client Credentials OAuth connection</description>
    <label>Client Credential parameters</label>
    <pluralLabel>Client Credential parameters</pluralLabel>
</CustomObject>