force-app/main/default/objects/Client_Credentials_OAuth__mdt/fields/AuthProviderURLSuffix__c.field-meta.xml
<CustomField>
    <fullName>AuthProviderURLSuffix__c</fullName>
    <description>The URL suffix of this auth provider.</description>
    <inlineHelpText>The URL suffix of this auth provider (as defined above in the URL Suffix field).</inlineHelpText>
    <label>URL Suffix (again)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>