force-app/main/default/objects/Client_Credentials_OAuth__mdt/fields/Named_Credentials_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credentials_Name__c</fullName>
    <description>The name of the Salesforce Named Credentials containing the Client ID and Secret (stored as username and password).</description>
    <inlineHelpText>The name of the Salesforce Named Credentials containing the Client ID and Secret (stored as username and password).</inlineHelpText>
    <label>Named Credentials Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>