force-app/main/default/objects/Client_Credentials_OAuth__mdt/fields/OAuth_Scopes__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Scopes__c</fullName>
    <description>OAuth Scopes to request.</description>
    <inlineHelpText>OAuth Scopes to request.</inlineHelpText>
    <label>OAuth Scopes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>